# image-dedup

./: .gitignore  =1.4.0  =7.0.0  GITHUB_RELEASE_GUIDE.md  ImageDeduplicator.spec  LICENSE  MANIFEST.in  README.md  create_release.py  image_deduplicator.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  setup.py  stop_deduplicator.py
image_deduplicator/: __init__.py  image_deduplicator.py
release_packages/: README.txt  image_deduplicator-2.0.0-py3-none-any.whl
